--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,13 @@
   margin-right: 10%;
   padding-bottom: 3em;
 }
+/*Styling applied to give about page more content room.*/
+.about_top {
+  width: 80%;
+  margin-left:10%;
+  margin-right: 10%;
+  /*padding-bottom: 3em;*/
+}
 /*Styling applied only to the bottom columns.*/
 .sub_column {
   width: 40%;
@@ -80,12 +87,20 @@
   font-family: monospace;
   font-size: 1.5em;
   list-style: square;
-
 }
 .top_header {
   font-size: 5em;
   color: #FFF;
   padding-bottom: 3em;
+}
+.short_top_header {
+  font-size: 3em;
+  color: #FFF;
+  padding-bottom: 0;
+  margin-bottom: 0em;
+}
+.short_top_column {
+  margin-top: 2em;
 }
 /*Test changes inverting column colors. Can be refactored into previous CSS*/
 .column_header, .column_text, .column_gradient {
@@ -100,4 +115,10 @@
   color: black;
   background-color: #EEE;
   text-decoration: none;
+}
+.profile_pics {
+  max-width: 40%;
+  display:inline-block;
+  margin-left: 5%;
+  margin-bottom: 5%;
 }
