--- a/css/styles.css
+++ b/css/styles.css
@@ -175,19 +175,19 @@
   }
 
 }
-@media only screen and (max-device-width : 530px) {
+@media only screen and (min-device-width : 320px) and (max-device-width : 530px) {
   .sub_column {
-    width: 90%;
-    margin-left: 5%;
+    width: 95%;
+    margin-left: 2.5%;
   }
   .top_column {
     margin-top: 6em;
     padding-bottom: 0;
-    width: 90%;
-    margin-left: 5%;
+    width: 95%;
+    margin-left: 2.5%;
   }
   .top_header {
-    font-size: 1.5em;
+    font-size: 1.25em;
   }
   .about_top {
     margin-top: 8em;
@@ -197,6 +197,22 @@
   }
   .page_header {
     font-size: 1em;
+  }
+  .profile_pics {
+    max-width: 80%;
+    display:inline-block;
+    margin-left: 10%;
+    margin-bottom: 5%;
+  }
+  .tab_style: {
+    font-size: 0.8em;
+  }
+  .active {
+    width: 100%;
+    display: none !important;
+  }
+  .tab_style {
+    width: 100%;
   }
 
 }
