Add information to the README, rebase poor commit descriptions and remove excessive line break tags.

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-/*This is all custum styling added to the bootstrap nav used.*/
+/*This is all custom styling added to the bootstrap nav.*/
 .tab_style {
   background-color: #222;
   border-color: #EEE;
